[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde_with = "3.8.1"
thiserror = "1.0.61"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
blake3 = "1.5.1"
bytes = "1.6.0"
derive_builder = "0.20.0"
derive_more = "0.99.17"
http = "1.1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
